# mit_lift_lab_analisis_adelift

./: .gitignore  README.md  pyproject.toml
src/: borrador_trabajo.md
src/data/processed/: clean_survey_full.csv  clean_survey_to_analyze.csv
src/data/raw/: LIFT Digitization and Performance Index - Argentina - Fall 2025_October 29, 2025_08.44.csv
src/latex/: main.tex  references.bib
src/latex/sections/: 01_introduccion.tex  02_datos_y_metodologia.tex  03_resultados.tex  04_conclusiones.tex  04_proximos_pasos.tex  05_conclusiones.tex
src/notebooks/: 0_initial_cleaning.ipynb  2_analisis_estacionalidad.ipynb
