[project]
name = "mit-analisis"
version = "0.1.0"
description = "MIT LIFT LAB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.18.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "numpy>=2.2.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "rapidfuzz>=3.11.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "unidecode>=1.3.8",
    "wordcloud>=1.9.4",
]
